<resources>
    <string name="app_name">Telefonbuch</string>
    <string name="add">Hinzufügen</string>
    <string name="phoneNumber">Telefonnummer</string>
    <string name="name">Name</string>
    <string name="contactPicture">Kontakt Bild</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="back">back</string>
</resources>